--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -181,3 +181,20 @@ h1, h2, h3, h4, h5, h6 {
 .userNameColorChange {
   color: #18243C !important;
 }
+
+.btn-load {
+  background: linear-gradient(269.33deg, #E04E7C 1.15%, #E01E82 93.94%);
+  border: 1px solid #B11859;
+  border-radius: 29px;
+  box-shadow: 0px 14px 34px rgb(181 0 78 / 31%);
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1;
+  display: inline-block;
+  padding: 18px 90px;
+}
+
+.btn-load:hover {
+  color: #FFFFFF;
+}
