--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -256,8 +256,20 @@ body {
   padding: 18px 45px;
 }
 
+.btn-submit {
+  background: #57B0AF;
+  border-radius: 29px;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1;
+  display: inline-block;
+  padding: 18px 45px;
+}
+
 .btn-load:hover,
-.btn-reset:hover {
+.btn-reset:hover,
+.btn-submit:hover {
   color: #FFFFFF;
 }
 
