--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -379,7 +379,7 @@ body {
   box-shadow: 0px 10px 40px rgb(0 0 0 / 3%);
   border-radius: 20px;
   height: 75vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .tickets-list-tabs {
@@ -409,6 +409,7 @@ body {
 
 .tickets-list-main {
   padding: 20px 15px;
+  overflow-y: scroll;
 }
 
 .tickets-list-user {
@@ -422,7 +423,7 @@ body {
 }
 
 .tickets-list-user .tickets-list-user-right {
-  width: 20% !important;
+  width: 22% !important;
 }
 
 .tickets-list-user .tickets-list-user-middle {
@@ -431,11 +432,12 @@ body {
 
 .tickets-list-user .tickets-list-user-left {
   padding-right: 10px;
+  width: 18% !important;
 }
 
 .tickets-list-user .this-image,
 .tickets-messages .this-image {
-  max-width: 55px;
+  max-width: 48px;
 }
 
 .tickets-list-user .this-user {
@@ -536,6 +538,9 @@ body {
   overflow-y: scroll;
 }
 
+.tickets-list-main::-webkit-scrollbar,
+.tickets-list-main::-webkit-scrollbar-track,
+.tickets-list-main::-webkit-scrollbar-thumb,
 .tickets-messages-history::-webkit-scrollbar,
 .tickets-messages-history::-webkit-scrollbar-track,
 .tickets-messages-history::-webkit-scrollbar-thumb {
