--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -426,6 +426,7 @@ body {
 
 .tickets-list-user.active {
   background: #EEEEEE;
+  cursor: default;
 }
 
 .tickets-list-user .tickets-list-user-right {
@@ -542,7 +543,7 @@ body {
 }
 
 .tickets-messages-history {
-  padding: 30px;
+  padding: 30px 30px 0;
   overflow-y: scroll;
 }
 
@@ -576,7 +577,8 @@ body {
 }
 
 .tickets-messages-history .msg-container .msg-text img {
-  border-radius: 20px;
+  background: #FFFFFF;
+  border-radius: 10px;
   max-width: 100px;
 }
 
