--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -587,6 +587,19 @@ body {
   height: 150px;
 }
 
+.tickets-messages-history .msg-container .msg-text .link-download {
+  margin-left: 5px;
+}
+
+.tickets-messages-history .msg-container .msg-text .link-download img {
+  background: none;
+  border-radius: 0;
+}
+
+.tickets-messages-history .msg-outgoing .msg-container .msg-text .link-download img {
+  filter: brightness(0) invert(1);
+}
+
 .tickets-messages-history .msg-container .msg-time-elapsed {
   color: #09110E;
   font-size: 10px;
