--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -737,3 +737,38 @@ body {
 .user-profile .id-info img {
   max-width: 300px;
 }
+
+
+/* Dashboard page styles */
+.dashboard-page .statistics .this-box {
+  background: #FFFFFF;
+  border: 1px solid #D9D9D9;
+  border-radius: 30px;
+  padding: 30px 25px 30px 35px;
+}
+
+.dashboard-page .statistics .this-title {
+  color: #686868;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.dashboard-page .statistics .this-total {
+  color: #18243C;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 40px;
+}
+
+.dashboard-page .statistics img {
+  /* width: 200px; */
+  height: 90px;
+}
+
+.dashboard-page .statistics .this-percentage {
+  color: #16DB4D;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 26px;
+}
