--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -772,3 +772,73 @@ body {
   font-weight: 800;
   font-size: 26px;
 }
+
+.dashboard-page .text-red {
+  color: #FB0000 !important;
+}
+
+.dashboard-page .text-gray {
+  color: #7A7A7A !important;
+}
+
+.dashboard-page .recent-users .this-box {
+  background: #FFFFFF;
+  border: 1px solid #D9D9D9;
+  border-radius: 30px;
+  padding: 30px 35px;
+}
+
+.dashboard-page .recent-users h4 {
+  color: #18243C;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 36px;
+}
+
+.dashboard-page .recent-users .date-now {
+  font-size: 16px;
+}
+
+.dashboard-page .recent-users .activities-list {
+  margin-top: 50px;
+}
+
+.dashboard-page .recent-users .activities-list-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.dashboard-page .recent-users .this-details {
+  margin-left: 25px;
+}
+
+.dashboard-page .recent-users .this-details .this-name {
+  color: #18243C;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 8px;
+}
+
+.dashboard-page .recent-users .this-details .this-message {
+  color: #7A7A7A;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.dashboard-page .recent-users .btn-see-all {
+  color: #FFFFFF;
+  background: linear-gradient(269.33deg, #E04E7C 1.15%, #E01E82 93.94%);
+  border: 1px solid #B11859;
+  box-shadow: 0px 14px 34px rgba(181, 0, 78, 0.31);
+  border-radius: 29px;
+  display: block;
+  margin-top: 50px;
+  padding: 15px 0;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.01em;
+  transition: all 0.2s ease-in-out;
+}
