--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -842,3 +842,35 @@ body {
   letter-spacing: -0.01em;
   transition: all 0.2s ease-in-out;
 }
+
+.dashboard-page .total-30 {
+  background: #36C5F0;
+  border: 1px solid #D9D9D9;
+  border-radius: 30px;
+  padding: 30px 35px;
+}
+
+.dashboard-page .total-30 * {
+  color: #FFFFFF;
+}
+
+.dashboard-page .total-30 .this-details h5 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.dashboard-page .total-30 .this-details p {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.6;
+  margin-bottom: 10px;
+}
+
+.dashboard-page .total-30 .this-details h4 {
+  font-size: 45px;
+  font-weight: 700;
+}
+
+.dashboard-page .total-30 .this-image img {
+  width: 65px;
+}
