--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -874,3 +874,33 @@ body {
 .dashboard-page .total-30 .this-image img {
   width: 65px;
 }
+
+.dashboard-page .chart-box {
+  background: #FFFFFF;
+  border: 1px solid #D9D9D9;
+  border-radius: 30px;
+  padding: 30px 35px;
+}
+
+.dashboard-page .chart-box h4 {
+  color: #18243C;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 36px;
+}
+
+.dashboard-page .chart-box a {
+  color: #CFCFCF;
+  font-size: 16px;
+  transition: all 0.2s ease-in-out;
+}
+
+.dashboard-page .chart-box a:hover {
+  color: #E04E7C;
+}
+
+.dashboard-page .chart-box .this-chart.user-activity {
+  background: #36C5F0;
+  border-radius: 30px;
+  padding: 20px;
+}
