FLIGHT-106: Removed percentage, fixed statistics styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -763,7 +763,8 @@ body {
 
 .dashboard-page .statistics img {
   /* width: 200px; */
-  height: 90px;
+  /* height: 90px; */
+  width: 120px;
 }
 
 .dashboard-page .statistics .this-percentage {
